--- a/src/main/resources/templates/testinput.html
+++ b/src/main/resources/templates/testinput.html
@@ -15,6 +15,12 @@
                 <label>문자 입력:</label>
                 <input type="text" id="testvalue2" name="testvalue02" />
             </div>
+            <!--
+            <div>
+                <label>날짜 선택:</label>
+                <input type="date" id="inputdate" name="inputdate" />
+            </div>
+            -->
             <button type="submit">SUBMIT</button>
         </form>
     </div>
