--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -15,15 +15,20 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">TEST01 <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="input">test 입력</a></li>
             <li><a href="output">test 출력</a></li>
             <li><a href="#">Page 1-3</a></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">TEST02 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="input02">test02 입력</a></li>
+            <li><a href="output02">test02 출력</a></li>
+            <li><a href="#">Page 1-3</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </nav>
