--- a/src/main/resources/templates/test02input.html
+++ b/src/main/resources/templates/test02input.html
@@ -6,7 +6,7 @@
 <body>
     <div>
         <h2>테스트 입력</h2>
-        <form th:action="@{/save02}" method="post">
+        <form th:action="@{/save02}" method="post" enctype="multipart/form-data">
             <div>
                 <label>제목 입력:</label>
                 <input type="text" id="title" name="title" />
@@ -18,6 +18,10 @@
             <div>
                 <label>저자 입력:</label>
                 <input type="text" id="writer" name="writer" />
+            </div>
+            <div>
+                <label>이미지 선택:</label>
+                <input type="file" id="image" name="image" />
             </div>
             <button type="submit">SUBMIT</button>
         </form>
