--- a/src/main/resources/templates/test02update.html
+++ b/src/main/resources/templates/test02update.html
@@ -5,7 +5,7 @@
 <body>
   <div>
     <h2>테스트 입력</h2>
-    <form th:action="@{/update_save02}" method="post">
+    <form th:action="@{/update_save02}" method="post" enctype="multipart/form-data">
       <div>
         <label>시퀀스 번호:</label>
         <input type="text" id="id" name="id" th:value="${update.id}" readonly />
@@ -23,8 +23,12 @@
         <input type="text" id="writer" name="writer" th:value="${update.writer}" />
       </div>
       <div>
-        <label>날짜:</label>
-        <input type="text" id="inputdate" name="inputdate" th:value="${update.inputdate}" readonly />
+        <label>날짜 선택:</label>
+        <input type="text" id="inputdate" name="inputdate" th:value="${update.inputdate}" />
+      </div>
+      <div>
+        <label>이미지 선택:</label>
+        <input type="file" id="testimage" name="testimage" th:value="${update.testimage}" />
       </div>
       <button type="submit">SUBMIT</button>
     </form>
