CRUD05, 이미지 삭제(저장된것까지)

--- a/src/main/resources/templates/test02output.html
+++ b/src/main/resources/templates/test02output.html
@@ -25,7 +25,7 @@
                 </td>
                 <td>
                     <a th:href="@{update2(num=${out2.id})}">수정</a>
-                    <a th:href="@{delete2(num=${out2.id})}">삭제</a>
+                    <a th:href="@{delete2(num=${out2.id}, testimage=${out2.testimage})}">삭제</a>
                 </td>
             </tr>
         </table>
