--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -3,39 +3,46 @@
 <html xmlns:th="http://www.thymeleaf.org" th:fragment="menu">
 
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">TEST01 <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="input">test 입력</a></li>
-            <li><a href="output">test 출력</a></li>
-            <li><a href="#">Page 1-3</a></li>
-          </ul>
-        </li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">TEST02 <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="input02">test02 입력</a></li>
-            <li><a href="output02">test02 출력</a></li>
-            <li><a href="#">Page 1-3</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </nav>
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">WebSiteName</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">TEST01 <span
+                    class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="input">test 입력</a></li>
+                    <li><a href="output">test 출력</a></li>
+                    <li><a href="#">Page 1-3</a></li>
+                </ul>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">TEST02 <span
+                    class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="input02">test02 입력</a></li>
+                    <li><a href="output02">test02 출력</a></li>
+                    <li><a href="#">Page 1-3</a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
 
-  <div class="container">
+            <li><a href="sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
     <h3>Navbar With Dropdown</h3>
     <p>This example adds a dropdown menu for the "Page 1" button in the navigation bar.</p>
-  </div>
+</div>
 </body>
 </html>
