LOGIN03, 관리자 권한 생성(DB로 직접 생성)

--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -250,6 +250,9 @@
             <label>ADRESS: </label>
             <input type="text" id="madress" name="madress"/>
         </div>
+
+        <input type="hidden" id="role" name="role" value="USER" />
+
         <button type="submit">SUBMIT</button>
     </form>
 </div>
